Support moving all data out of public/
